[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/game.gd" type="Script" id=1]
[ext_resource path="res://gui/debug/DebugInfo.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/warning/Warning.tscn" type="PackedScene" id=3]
[ext_resource path="res://screens/Screens.tscn" type="PackedScene" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="DebugInfo" parent="." instance=ExtResource( 2 )]
margin_bottom = 14.0

[node name="Warning" parent="." instance=ExtResource( 3 )]

[node name="Screens" parent="." instance=ExtResource( 4 )]

[node name="PlayerInitialPosition" type="Position2D" parent="."]
position = Vector2( 512, 450 )

[node name="WeaponContainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]
[connection signal="start_game" from="Screens" to="." method="_on_Screens_start_game"]
